<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>inserisci_assegnamento</class>
 <widget class="QWidget" name="inserisci_assegnamento">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>359</width>
    <height>339</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Nuovo Assegnamento</string>
  </property>
  <property name="styleSheet">
   <string notr="true">background-color: rgb(0, 0, 0);</string>
  </property>
  <layout class="QGridLayout" name="gridLayout">
   <item row="0" column="0" alignment="Qt::AlignHCenter|Qt::AlignVCenter">
    <widget class="QWidget" name="widget" native="true">
     <property name="styleSheet">
      <string notr="true">background-color: rgb(69, 162, 0);</string>
     </property>
     <layout class="QGridLayout" name="gridLayout_2">
      <item row="0" column="0">
       <widget class="QLineEdit" name="textPrenotazioni">
        <property name="styleSheet">
         <string notr="true">background-color: rgb(0, 0, 0);
color: rgb(255, 255, 255);</string>
        </property>
       </widget>
      </item>
      <item row="0" column="1">
       <widget class="QLineEdit" name="textServizio">
        <property name="styleSheet">
         <string notr="true">background-color: rgb(0, 0, 0);
color: rgb(255, 255, 255);</string>
        </property>
       </widget>
      </item>
      <item row="1" column="0">
       <widget class="QPushButton" name="RicercaButton">
        <property name="styleSheet">
         <string notr="true">color: rgb(69, 162, 0);
background-color: rgb(0, 0, 0);</string>
        </property>
        <property name="text">
         <string>Ricerca</string>
        </property>
       </widget>
      </item>
      <item row="1" column="1">
       <widget class="QPushButton" name="RicercaButton_Servizi">
        <property name="styleSheet">
         <string notr="true">color: rgb(69, 162, 0);
background-color: rgb(0, 0, 0);</string>
        </property>
        <property name="text">
         <string>Ricerca</string>
        </property>
       </widget>
      </item>
      <item row="2" column="0" rowspan="2">
       <widget class="QListView" name="listViewPrenotazioni">
        <property name="styleSheet">
         <string notr="true">background-color: rgb(0, 0, 0);
color: rgb(255, 255, 255);</string>
        </property>
       </widget>
      </item>
      <item row="2" column="1">
       <widget class="QListView" name="listViewServizi">
        <property name="styleSheet">
         <string notr="true">background-color: rgb(0, 0, 0);
color: rgb(255, 255, 255);</string>
        </property>
       </widget>
      </item>
      <item row="3" column="1">
       <widget class="QPushButton" name="btn_ok">
        <property name="styleSheet">
         <string notr="true">color: rgb(69, 162, 0);
background-color: rgb(0, 0, 0);</string>
        </property>
        <property name="text">
         <string>OK</string>
        </property>
       </widget>
      </item>
     </layout>
    </widget>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections/>
</ui>
